Added Jira Utility for auto update the status of test cases